# hydra-check

./: .gitignore  .nixpkgs-version.json  Cargo.toml  LICENSE  README.md  build.rs  default.nix  flake.nix  hydra-check  package.nix  pyproject.toml  release.sh  setup.cfg  setup.py  shell.nix
.github/workflows/: release.yml  test.yml
hydracheck/: cli.py
src/: args.rs  constants.rs  fetch_stable.rs  lib.rs  main.rs  soup.rs
src/hydra_check/: arguments.py  cli.py
src/queries/: builds.rs  evals.rs  jobset.rs  mod.rs  packages.rs
src/structs/: build.rs  builds.rs  eval.rs  icons.rs  inputs.rs  mod.rs  release.rs
tests/: conftest.py  test_tests.py
