[package]
name = "hydra-check"
version = "2.0.0"
authors = ["Felix Richter <github@krebsco.de>", "Bryan Lai <bryanlais@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.37"
colored = "2.1.0"
comfy-table = { version = "7.1.1", features = ["custom_styling"] }
flexi_logger = "0.29.3"
indexmap = { version = "2.6.0", features = ["serde"] }
log = "0.4.22"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["blocking", "cookies", "gzip"] }
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"

[dev-dependencies]
insta = "1.41.1"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
