[package]
name = "hydra-check"
version = "2.0.5"
description = "Check hydra for the build status of a package"
authors = ["Felix Richter <github@krebsco.de>", "Bryan Lai <bryanlais@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/nix-community/hydra-check"
keywords = ["cli"]
categories = ["command-line-utilities"]
rust-version = "1.80" # for std::sync::LazyLock

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.37"
colored = "2.1.0"
comfy-table = { version = "7.1.1", features = ["custom_styling"] }
flexi_logger = "0.29.3"
indexmap = { version = "2.6.0", features = ["serde"] }
log = "0.4.22"
once_cell = "1.21.3"
regex = "1.11.0"
reqwest = { version = "0.12.8", features = ["blocking", "cookies", "gzip"] }
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serde_with = { version = "3.11.0", default-features = false, features = ["macros"] }
yansi = { version = "1.0.1", features = ["hyperlink"] }

[dev-dependencies]
insta = "1.41.1"
temp-env = "0.3.6"

[build-dependencies]
anyhow = "1.0.89"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
manual_string_new = "allow"
match_bool = "allow"
single_match = "allow"
single_match_else = "allow"
missing_errors_doc = "allow"
multiple_crate_versions = "allow" # toggle to review dependencies
