[tool.poetry]
name = "hydra-check"
version = "1.2.0"
description = "check hydra for the build status of a package"
readme = "README.md"
license = "MIT"
authors = ["Felix Richter <github@krebsco.de>"]

[tool.poetry.scripts]
hydra-check = 'hydra_check.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.2"
beautifulsoup4 = "^4.1"
docopt = "^0.6"

[tool.poetry.dev-dependencies]
types-requests = "^2.27.15"
types-beautifulsoup4 = "^4.10.16"
types-docopt = "^0.6.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy.mypy]
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true

# for the nixpkgs package as some of these types aren't in nixpkgs
[[tool.mypy.overrides]]
module = [
    "setuptools",
    "bs4",
    "docopt",
    "requests"
]
ignore_missing_imports = true


[tool.black]
line-length = 88
target_version = ['py310']

[tool.pylint.master]
init-hook = "import sys; sys.path.append('src')"

[tool.pylint.FORMAT]
output-format = "colorized"
max-line-length = 88
