[tool.poetry]
name = "hydra-check"
# update flake.nix too
version = "1.3.3"
description = "check hydra for the build status of a package"
readme = "README.md"
license = "MIT"
authors = ["Felix Richter <github@krebsco.de>"]

[tool.poetry.scripts]
hydra-check = 'hydra_check.cli:main'

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.2"
beautifulsoup4 = "^4.1"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
types-requests = "^2.27.15"
types-beautifulsoup4 = "^4.10"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
coverage = {extras = ["toml"], version = "^6.2"}
types-colorama = "^0.4.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

# for the nixpkgs package as some of these types aren't in nixpkgs
[[tool.mypy.overrides]]
module = [
    "setuptools",
    "bs4",
    "docopt",
    "requests",
    "termcolor",
]
ignore_missing_imports = true


[tool.black]
line-length = 120
target_version = ['py310']

[tool.pylint.master]
init-hook = "import sys; sys.path.append('src')"

[tool.pylint.FORMAT]
output-format = "colorized"
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    # Many functions (e.g. callbacks) will naturally have unused arguments.
    "unused-argument",

    # Disable failure for TODO items in the codebase (code will always have TODOs).
    "fixme",

    "missing-docstring"
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["hydra_check"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
# tests, src so that the nix shell doesn't have to be restarted
testpaths = ["tests", "src"]
addopts = "-sv"
